force-app/main/default/objects/csfb__Connected_App_Setting__mdt/fields/csfb__Conga_Package__c.field-meta.xml
<CustomField>
    <fullName>csfb__Conga_Package__c</fullName>
    <defaultValue>&quot;sfb&quot;</defaultValue>
    <label>Conga Package</label>
    <length>10</length>
    <type>Text</type>
</CustomField>