force-app/main/default/objects/csfb__Connected_App_Setting__mdt/fields/csfb__Hostname__c.field-meta.xml
<CustomField>
    <fullName>csfb__Hostname__c</fullName>
    <label>Hostname</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>