force-app/main/default/objects/csfb__Connected_App_Setting__mdt/fields/csfb__Namespace__c.field-meta.xml
<CustomField>
    <fullName>csfb__Namespace__c</fullName>
    <label>Namespace</label>
    <length>20</length>
    <type>Text</type>
</CustomField>